# tinyroute

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  rustfmt.toml
.github/workflows/: rust.yml
examples/: client.rs  server.rs  tcpclient.rs  tlsclient.rs  udsclient.rs
misc/: Sprite-0001.aseprite  bridge-disaster.aseprite  diagram-of-bridge.aseprite  diagram-of-little-interest.aseprite
src/: agent.rs  async_std_runtime.rs  bridge.rs  client.rs  client_sync.rs  error.rs  errors.rs  frame.rs  lib.rs  request.rs  response.rs  router.rs  runtime.rs  server.rs  tokio_runtime.rs  websockets.rs
src/client/: mod.rs  tcp.rs  tcp_async_std.rs  tcp_tokio.rs  uds.rs
src/runtime/: mod.rs
src/runtime.rs/: uds.rs
src/runtime/async_std_runtime/: mod.rs  tcp.rs  uds.rs
src/runtime/smol_runtime/: mod.rs  tcp.rs  uds.rs
src/runtime/tokio_runtime/: mod.rs  tcp.rs  uds.rs
src/server/: mod.rs  tcp.rs  tcp_async_std.rs  tcp_tokio.rs  uds.rs
tests/: agents.rs  runaway.rs  server.rs
