[package]
name = "tinyroute"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
bytes = "1.5.0"
flume = "0.11.0"
fxhash = "0.2.1"
log = "0.4.20"
rand = "0.8.5"
thiserror = "1.0.50"
tokio = { version = "1.11.0", features = ["net", "rt", "rt-multi-thread", "time", "io-util", "macros" ] }

[dev-dependencies]
pretty_env_logger = "0.4.0"
tokio = { version = "1.11.0", features = ["full"] }
